syntax = "proto3";

package xmux.forum.v4;

import "google/protobuf/timestamp.proto";
import "forum_common.proto";
import "validate/validate.proto";

option java_package = "io.xdea.xmux.forum.dto";
option java_outer_classname = "ThreadGrpcApi";

message CreateThreadReq {
  int32 forumId = 1;
  string title = 2;

  oneof body {
    PlainContent plainContent = 30;
    MarkdownContent markdownContent = 31;
  }
}

message CreateThreadResp {
  int32 threadId = 1;
}

message RemoveThreadReq {
  int32 threadId = 1;
}

message UpdateThreadReq {
  int32 id = 1;
  string title = 2;
  string body = 3;
}

message GetThreadsReq {
  int32 forumId = 1;
  Ordering ordering = 2;
  int32 offset = 3;
  int32 count = 4;
}

message GetThreadsResp {
  repeated Thread threads = 1;
}

message Thread {
  int32 id = 1;
  string uid = 2;
  string title = 3;
  int32 likes = 4;
  int32 posts = 5;
  bool pinned = 6;
  bool digest = 7;
  google.protobuf.Timestamp createAt = 8;
  // Last modification.
  google.protobuf.Timestamp updateAt = 9;
  // Last activity.
  google.protobuf.Timestamp lastUpdate = 10;
  // + For like. - for dislike. 0 for cancel.
  int32 liked = 11;
  // Whether current thread is saved by user.
  bool saved = 12;

  oneof body {
    PlainContent plainContent = 30;
    MarkdownContent markdownContent = 31;
  }
}

message LikeThreadReq {
  int32 threadId = 1;
  // + For like. - for dislike. 0 for cancel.
  int32 like = 2;
}

message PinThreadReq {
  int32 threadId = 1;
  bool pinned = 2;
}

message DigestThreadReq {
  int32 threadId = 1;
  bool digest = 2;
}